<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string> <!-- Unlink from Dropbox -->
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="new_">New</string> <!-- "new" is reserved -->
    <string name="select">Select</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="not_now">Not now</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="remove_notebook_link">Remove link</string>
    <string name="browse">Browse</string>
    <string name="dropbox">Dropbox</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="edit_note">Edit note</string>
    <string name="delete">Delete</string>
    <string name="delete_with_quoted_argument">Delete “%s”</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
    <string name="reminder_snooze">Snooze</string>
    <string name="close">Close</string>
    <string name="import_">Import</string> <!-- Reserved keyword -->
    <string name="export">Export</string>
    <string name="overwrite">Overwrite</string>
    <string name="imported">Imported</string>
    <string name="created">Created</string>
    <string name="states">States</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="property">Property</string>
    <string name="import_as">Import as…</string>
    <string name="new_notebook">New notebook</string>
    <string name="new_folder">New folder</string>
    <string name="scheduled">Scheduled</string>
    <string name="agenda">Agenda</string>
    <string name="agenda_period">Agenda days</string>
    <string name="time">Time</string>
    <string name="repeater">Repeater</string>
    <string name="state">State</string>
    <string name="priority">Priority</string>
    <string name="nothing">Nothing</string>
    <string name="open">Open</string>
    <string name="focus">Focus</string>
    <string name="widget">Widget</string>
    <string name="history">History</string>
...
    <string name="search_hint">Search notes</string>
    <string name="clear_database">Clear database</string>
    <string name="clear_database_dialog_message">Clear local database?</string>
    <string name="clear_database_summary">Clear local database</string>
    <string name="clear_database_performed">Database cleared</string>

    <string name="getting_started_notebook_name">Getting Started with Orgzly</string>
    <string name="reload_getting_started">Import “Getting Started with Orgzly”</string>
    <string name="reload_getting_started_summary">Import the latest version of the notebook</string>
    <string name="notebook_imported">Notebook imported</string>

    <string name="book_does_not_exist_anymore">This notebook does not exist any more.</string>
    <string name="note_does_not_exist_anymore">This note does not exist any more.</string>
    <string name="search_does_not_exist_anymore">This search does not exist any more.</string>
...
    <string name="tags">Tags</string>
    <string name="book_mtime">Notebook modification time</string>
    <string name="book_link">Notebook link</string>
    <string name="book_link_details">Notebook link details</string>
    <string name="book_last_action">Notebook last action</string>
    <string name="book_notes_count">Notes count</string>
    <string name="pref_title_notebooks">Notes &amp; Notebooks</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="searches">Searches</string>
    <string name="search">Search</string>
    <string name="new_search">New Search</string>
    <string name="multiple_repos">Multiple repositories exist</string>
...

    <string name="also_delete_linked_book">Delete linked remote notebook</string>
    <string name="message_deleting_book_failed">Deleting notebook failed: %s</string>
    <string name="message_book_deleted">Notebook deleted</string>

    <string name="priority_with_argument">Priority %s</string>
    <string name="default_priority">Default priority</string>
    <string name="lowest_priority">Lowest priority</string>

    <string name="todo_states">Keywords for active (todo) tasks</string>
    <string name="done_states">Keywords for completed (done) tasks</string>

    <string name="created_at">Created at</string>
    <string name="insert_note_creation_time">Insert note\'s creation time</string>

    <string name="use_created_at_property">Use property for created-at time</string>
    <string name="use_created_at_property_summary">Sync created-at time using a property</string>

    <string name="created_at_property">Created-at property</string>

    <string name="properties">Properties</string>
    <string name="property_name">Property name</string>
    <string name="property_value">Property value</string>

    <string name="reminder_for_scheduled">Scheduled: %s</string>
...
    <string name="reversed_note_click_action">Swap note click and long-click actions</string>
    <string name="reversed_note_click_action_summary">Click to select note, long-click to open</string>
    <string name="look_and_feel">Look &amp; Feel</string>
    <string name="notes_list">List of notes</string>
    <string name="prefs_title_new_note">New note</string>
    <string name="prefs_title_notifications">Notifications</string>
    <string name="app">App</string>
    <string name="no_repos_configured">No repos configured</string>
    <string name="test_connection">Test connection</string>
    <string name="connecting">Connecting…</string>
    <string name="no_connection">No connection</string>
    <string name="connection_successful">Connection successful</string>
    <string name="last_sync_with_argument">Last sync: %s</string>
...

    <string name="no_notes_deleted">No notes deleted</string>

    <string name="note_content_finish_editing">View content</string>
    <string name="note_content_start_editing">Edit content</string>

    <string name="duplicate_keywords_not_allowed">Keyword %s already used</string>
    <string name="no_states_defined">No states defined</string>
    <string name="book_name_in_search">Notebook name in search results</string>

    <string name="display_notebook_name">Display notebook name</string>

    <string name="display_inherited_tags_in_search_results">Inherited tags in search results</string>
...

    <string name="preface_in_book">Notebook\'s preface</string>
    <string name="preface_in_book_full">Display</string>
    <string name="preface_in_book_hide">Hide</string>
    <string name="preface_in_book_few_lines">Display few lines</string>

    <string name="created_property_name">CREATED</string>

    <string name="separate_notes_with_new_line_always">Always</string>
    <string name="separate_notes_with_new_line_multi_line_notes_only">Multiline notes only</string>
    <string name="separate_notes_with_new_line_never">Never</string>

    <string name="default_notebook">Default notebook</string>
...
